Server wont start

--- a/school-portal/src/main/webapp/admin.html
+++ b/school-portal/src/main/webapp/admin.html
@@ -1,4 +1,3 @@
-<%@ page language="java" contentType="text/html; charset=UTF-8" pageEncoding="UTF-8"%>
 <!DOCTYPE html>
 <html>
 <head>
@@ -17,12 +16,15 @@
             <th>ID</th>
             <th>Username</th>
         </tr>
-        <c:forEach var="admin" items="${admins}">
-            <tr>
-                <td>${admin.id}</td>
-                <td>${admin.username}</td>
-            </tr>
-        </c:forEach>
+        <!-- Replace this with static HTML for admin list -->
+        <tr>
+            <td>1</td>
+            <td>Admin1</td>
+        </tr>
+        <tr>
+            <td>2</td>
+            <td>Admin2</td>
+        </tr>
     </table>
 </body>
 </html>
