--- a/school-portal/src/main/webapp/classes.html
+++ b/school-portal/src/main/webapp/classes.html
@@ -1,4 +1,3 @@
-<%@ page language="java" contentType="text/html; charset=UTF-8" pageEncoding="UTF-8"%>
 <!DOCTYPE html>
 <html>
 <head>
@@ -16,12 +15,15 @@
             <th>ID</th>
             <th>Name</th>
         </tr>
-        <c:forEach var="classObj" items="${classes}">
-            <tr>
-                <td>${classObj.id}</td>
-                <td>${classObj.name}</td>
-            </tr>
-        </c:forEach>
+        <!-- Replace this with static HTML for class list -->
+        <tr>
+            <td>1</td>
+            <td>Class A</td>
+        </tr>
+        <tr>
+            <td>2</td>
+            <td>Class B</td>
+        </tr>
     </table>
 </body>
 </html>
