--- a/school-portal/src/main/webapp/index.html
+++ b/school-portal/src/main/webapp/index.html
@@ -1,13 +1,12 @@
-<%@ page language="java" contentType="text/html; charset=UTF-8" pageEncoding="UTF-8"%>
 <!DOCTYPE html>
 <html>
 <head>
+    <title>Welcome to LearnAcademy</title>
     <meta charset="UTF-8">
-    <title>LearnAcademy</title>
     <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
     <h1>Welcome to LearnAcademy</h1>
-    <a href="students">View Students</a>
+    <a href="students.html">View Students</a>
 </body>
 </html>
