--- a/school-portal/src/main/webapp/teachers.html
+++ b/school-portal/src/main/webapp/teachers.html
@@ -1,4 +1,3 @@
-<%@ page language="java" contentType="text/html; charset=UTF-8" pageEncoding="UTF-8"%>
 <!DOCTYPE html>
 <html>
 <head>
@@ -18,13 +17,17 @@
             <th>Name</th>
             <th>Email</th>
         </tr>
-        <c:forEach var="teacher" items="${teachers}">
-            <tr>
-                <td>${teacher.id}</td>
-                <td>${teacher.name}</td>
-                <td>${teacher.email}</td>
-            </tr>
-        </c:forEach>
+        <!-- Replace this with static HTML for teacher list -->
+        <tr>
+            <td>1</td>
+            <td>Teacher A</td>
+            <td>teacherA@example.com</td>
+        </tr>
+        <tr>
+            <td>2</td>
+            <td>Teacher B</td>
+            <td>teacherB@example.com</td>
+        </tr>
     </table>
 </body>
 </html>
