--- a/school-portal/src/main/webapp/students.html
+++ b/school-portal/src/main/webapp/students.html
@@ -1,4 +1,3 @@
-<%@ page language="java" contentType="text/html; charset=UTF-8" pageEncoding="UTF-8"%>
 <!DOCTYPE html>
 <html>
 <head>
@@ -18,13 +17,17 @@
             <th>Name</th>
             <th>Email</th>
         </tr>
-        <c:forEach var="student" items="${students}">
-            <tr>
-                <td>${student.id}</td>
-                <td>${student.name}</td>
-                <td>${student.email}</td>
-            </tr>
-        </c:forEach>
+        <!-- Replace this with static HTML for student list -->
+        <tr>
+            <td>1</td>
+            <td>Student A</td>
+            <td>studentA@example.com</td>
+        </tr>
+        <tr>
+            <td>2</td>
+            <td>Student B</td>
+            <td>studentB@example.com</td>
+        </tr>
     </table>
 </body>
 </html>
